# dealer-scraper

./: .env.example  .gitignore  COMPLETE_DEVELOPER_GUIDE.md  COMPLETE_HANDOFF_GUIDE.md  DEVELOPER_SETUP.md  DIAGRAMS.md  Dockerfile  FINAL_SUMMARY.md  HANDOFF_EMAIL_TEMPLATE.md  HANDOFF_NOTES.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_VISUAL.md  RAILWAY_TROUBLESHOOTING.md  README.md  README_V2.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_V2.md  SIMPLIFIED_DIAGRAM.md  VISUAL_DIAGRAMS.md  app.py  app_legacy.py  config.py  debug_lithia.html  env.example  gemini_successes.csv  main.py  mypy.ini  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  rules.json  run.py  set_api_key.py  start.sh  test_results_20251218_122504.json  test_results_20251218_131039.json
.github/workflows/: README.md  build-and-push.yml  ci.yml  integration-tests.yml
archive/: CONTRIBUTING.md  Makefile  README.md  app_legacy.py  app_old_backup.py  main.py  pyproject.toml  requirements-test.txt
archive/.github/workflows/: build-and-push.yml  ci.yml
archive/cli/: __init__.py  main.py
archive/config/: __init__.py  logging_config.py  settings.py
archive/config_old/: __init__.py
archive/core/: __init__.py  data_service.py  scraper_service.py  web_scraper.py
archive/deployment/: GITHUB_PUSH_GUIDE.md  RAILWAY_DEPLOYMENT.md
archive/documentation/: REFACTORING_PLAN.md
archive/old_entry_points/: app_legacy.py
archive/scrapers_old/: base.py  group1.py  sonic.py
archive/scripts/: setup.py
archive/tests/: __init__.py  test_address_parser.py
archive/ui/: __init__.py  streamlit_app.py
archive/ui_old/: __init__.py
archive/utils_old/: browser.py
config/: settings.py
docs/: HOW_IT_WORKS.md  README.md
models/: __init__.py  dealership.py
scrapers/: __init__.py  ai_fallback.py  edwards.py  group1.py  kenganley.py  lithia.py  smart_generic.py
scrapers_old/: __init__.py  ai_fallback.py  kenganley.py  smart_generic.py
src/: __init__.py  config.py  exceptions.py  models.py
src/scrapers/: __init__.py  base_scraper.py  scraper_registry.py  strategy_manager.py
src/scrapers/extractors/: __init__.py  banister_extractor.py  dealeron_extractor.py  heading_address_extractor.py
src/scrapers/strategies/: __init__.py  autocanada_strategy.py  cooper_auto_strategy.py  courtesy_automotive_strategy.py  dealercom_content_blocks_strategy.py  generic_dealer_strategy.py  generic_dealer_strategy_v2.py  group1_automotive_strategy.py  hudson_automotive_strategy.py  javascript_strategy.py  json_ld_strategy.py  learned_rule_strategy.py  lithia_strategy.py  llm_fallback_strategy.py  new_llm_strategy.py  overfuel_locations_strategy.py  ray_skillman_strategy.py  sonic_dealercom_strategy.py
src/services/: __init__.py  data_service.py  playwright_subprocess.py  rule_store.py  scraper_service.py  web_scraper.py
src/ui/: streamlit_app.py
src/utils/: __init__.py  address_parser.py  data_cleaner.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_integration_scraping.py
tests/integration/: test_end_to_end.py
tests/unit/: test_address_parser.py  test_data_cleaner.py  test_scraper_service.py
ui/: streamlit_app.py
utils/: browser.py  parsers.py
utils_old/: __init__.py  logging.py  strategy_cache.py
